--- a/getdelays.be/Views/Shared/_Layout.cshtml
+++ b/getdelays.be/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,10 +21,10 @@
         <div class="navbar-collapse collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a href="/Station/SearchStation/" class="nav-link">See per stations</a>
+                    <a href="/Station/SearchStation/" class="nav-link">stations</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/Connection/SearchConnection/" class="nav-link">See Connection</a>
+                    <a href="/Connection/SearchConnection/" class="nav-link">Connection</a>
                 </li>
                 @if (Session["user"] == null)
                 {
